--- a/app/src/main/res/layout/activity_display_question.xml
+++ b/app/src/main/res/layout/activity_display_question.xml
@@ -138,11 +138,14 @@
         android:id="@+id/button6"
         android:layout_width="195dp"
         android:layout_height="75dp"
+        android:layout_marginTop="16dp"
         android:layout_marginBottom="72dp"
+        android:onClick="moveDisplayResult"
         android:text="@string/endQuestion"
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/p3Name" />
 </androidx.constraintlayout.widget.ConstraintLayout>
