--- a/app/src/main/res/layout/activity_input_answer.xml
+++ b/app/src/main/res/layout/activity_input_answer.xml
@@ -30,14 +30,16 @@
 
     <TextView
         android:id="@+id/targetPlayerName"
-        android:layout_width="134dp"
-        android:layout_height="37dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
         android:layout_marginEnd="144dp"
         android:layout_marginRight="144dp"
         android:text="TextView"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/textView11"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     <EditText
@@ -67,7 +69,7 @@
         android:text="解答者"
         app:layout_constraintBaseline_toBaselineOf="@+id/targetPlayerName"
         app:layout_constraintEnd_toStartOf="@+id/targetPlayerName"
-        app:layout_constraintHorizontal_bias="0.678"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
