--- a/app/src/main/res/layout/activity_display_result.xml
+++ b/app/src/main/res/layout/activity_display_result.xml
@@ -7,7 +7,7 @@
     tools:context=".DisplayResultActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textViewQ"
         android:layout_width="313dp"
         android:layout_height="57dp"
         android:layout_marginTop="16dp"
@@ -25,7 +25,7 @@
         android:layout_marginTop="16dp"
         android:text="Player1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewQ" />
 
     <Button
         android:id="@+id/button"
@@ -40,7 +40,7 @@
         android:text="Answer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textViewP1"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewQ" />
 
     <TextView
         android:id="@+id/textViewP2"
